// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "marginLeft": "auto",
          "marginRight": "auto",
          "marginTop": "60%",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
          "shadowColor": "rgba(0, 0, 0, 0.5)",
          "shadowOffset": Object {
            "height": 10,
            "width": 10,
          },
          "shadowOpacity": 1,
          "shadowRadius": 10,
          "width": "80%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Warning
        color="#dba970"
        height={70}
        width={70}
      />
      <View
        style={
          Array [
            Object {
              "marginTop": 10,
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#dba970",
              "fontSize": 25,
              "fontWeight": "bold",
            },
          ]
        }
      >
        Title
      </Text>
      <View
        style={
          Array [
            Object {
              "marginTop": 10,
            },
          ]
        }
      />
      <Text>
        Hello
      </Text>
    </View>
  </View>
</Modal>
`;

exports[`Modal renders no children 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "borderRadius": 10,
          "marginLeft": "auto",
          "marginRight": "auto",
          "marginTop": "60%",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
          "shadowColor": "rgba(0, 0, 0, 0.5)",
          "shadowOffset": Object {
            "height": 10,
            "width": 10,
          },
          "shadowOpacity": 1,
          "shadowRadius": 10,
          "width": "80%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Warning
        color="#dba970"
        height={70}
        width={70}
      />
      <View
        style={
          Array [
            Object {
              "marginTop": 10,
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#dba970",
              "fontSize": 25,
              "fontWeight": "bold",
            },
          ]
        }
      >
        Title
      </Text>
      <View
        style={
          Array [
            Object {
              "marginTop": 10,
            },
          ]
        }
      />
    </View>
  </View>
</Modal>
`;
